Changes for Tablet design.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Evaluate Algebraic Expressions - Addition (Birds)</title>
   <meta charset="UTF-8" />
   <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover,  shrink-to-fit=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="stylesheet" href="assets/css/reset.css" />
   <link rel="stylesheet" href="assets/plugins/bootstrap-5.1.3-dist/css/bootstrap.css" />
@@ -79,23 +79,25 @@
         <div class="exp_body_content">
           <div id="split-main" class="split">
             <div id="split-0">
-              <div id="set_mc">
-                <div id="bird1_set_mc_txt" class="birds_set_mc_txt">
-                  <div class="expr-text"></div>
-                </div>
-                <div id="bird2_set_mc_txt" class="birds_set_mc_txt">
-                  <div class="expr-text"></div>
-                </div>
-                <div id="bird3_set_mc_txt" class="birds_set_mc_txt">
-                  <div class="expr-text"></div>
-                </div>
-                <div id="bird4_set_mc_txt" class="birds_set_mc_txt">
-                  <div class="expr-text"></div>
-                </div>
-                <div id="bird5_set_mc_txt" class="birds_set_mc_txt">
-                  <div class="expr-text"></div>
-                </div>
-                <!--
+              <div class="zoom1" style="width: 100%; height: 100%;">
+                <div class="content-container mc">
+                  <div id="set_mc">
+                    <div id="bird1_set_mc_txt" class="birds_set_mc_txt">
+                      <div class="expr-text"></div>
+                    </div>
+                    <div id="bird2_set_mc_txt" class="birds_set_mc_txt">
+                      <div class="expr-text"></div>
+                    </div>
+                    <div id="bird3_set_mc_txt" class="birds_set_mc_txt">
+                      <div class="expr-text"></div>
+                    </div>
+                    <div id="bird4_set_mc_txt" class="birds_set_mc_txt">
+                      <div class="expr-text"></div>
+                    </div>
+                    <div id="bird5_set_mc_txt" class="birds_set_mc_txt">
+                      <div class="expr-text"></div>
+                    </div>
+                    <!--
                 <div id="eagleSet_mc" class="birds_set_mc"></div>
                 <div id="hornbillSet_mc" class="birds_set_mc"></div>
                 <div id="owlSet_mc" class="birds_set_mc"></div>
@@ -107,67 +109,72 @@
                 <div id="robinSet_mc" class="birds_set_mc"></div>
                 <div id="pigeonSet_mc" class="birds_set_mc"></div>
                 -->
+                  </div>
+                </div>
               </div>
             </div>
             <div id="split-1">
-              <div class="instruction_cont">
-                <div class="title_txt">
-                  Evaluate the Algebraic expressions given below.
-                </div>
-                <div class="instruction_txt">
-                  Read the instructions for more details.
-                </div>
-              </div>
-
-              <div class="quiz_cont">
-                <div class="quiz_cont_inner">
-                  <div class="config_cont row">
-                    <div class="noOfDigits_cont col-sm-12">
-                      <div class="title_txt">Number of Digits</div>
-                      <div>
-                        <button class="btn btn_minus" title="Decrement"
-                          disabled="disabled"><span>&#8722;</span></button>
-                        <input id="noOfDigitsInput_txt" type="number" value="1" min="1" max="5" class=""
-                          readonly="readonly" />
-                        <button class="btn btn_plus" title="Increment"><span>&#43;</span></button>
-                      </div>
+              <div class="zoom2" style="width: 100%; height: 100%;">
+                <div class="content-container instr">
+                  <div class="instruction_cont">
+                    <div class="title_txt">
+                      Evaluate the Algebraic expressions given below.
                     </div>
-                    <div class="maxTerms_cont col-sm-12">
-                      <div class="title_txt">Maximum Terms</div>
-                      <div>
-                        <button class="btn btn_minus" title="Decrement"
-                          disabled="disabled"><span>&#8722;</span></button>
-                        <input id="maxTermsInput_txt" type="number" value="2" min="2" max="5" class=""
-                          readonly="readonly" />
-                        <button class="btn btn_plus" title="Increment"><span>&#43;</span></button>
-                      </div>
+                    <div class="instruction_txt">
+                      Read the instructions for more details.
                     </div>
                   </div>
-
-                  <div class="score_cont">
-                    <div class="score_title">Score</div>
-                    <div class="score_txt">0/0</div>
-                  </div>
-
-                  <div class="ques_cont">
-                    <div class="wrong_mc">&#10006;</div>
-                    <div class="correct_mc">&#10004;</div>
-                    <div class="row" style="margin: 0px;">
-                      <div class="ques_content col-8">
-                        <div class="qNo_txt">Q1: What is the value of:</div>
-                        <div class="qtn_txt bold">QUESTION</div>
-                      </div>
-                      <div class="ans_content col-4">
-                        <div class="row" style="height: 100%;">
-                          <div class="col my-auto">
-                            <label htmlFor="numbInput_txt" class="numbInput_label bold">=</label>
-                            <input id="numbInput_txt" type="number" placeholder="0" class="bold" />
+                  <div class="quiz_cont">
+                    <div class="quiz_cont_inner">
+                      <div class="config_cont row">
+                        <div class="noOfDigits_cont col-sm-12">
+                          <div class="title_txt">Number of Digits</div>
+                          <div>
+                            <button class="btn btn_minus" title="Decrement"
+                              disabled="disabled"><span>&#8722;</span></button>
+                            <input id="noOfDigitsInput_txt" type="number" value="1" min="1" max="5" class=""
+                              readonly="readonly" />
+                            <button class="btn btn_plus" title="Increment"><span>&#43;</span></button>
+                          </div>
+                        </div>
+                        <div class="maxTerms_cont col-sm-12">
+                          <div class="title_txt">Maximum Terms</div>
+                          <div>
+                            <button class="btn btn_minus" title="Decrement"
+                              disabled="disabled"><span>&#8722;</span></button>
+                            <input id="maxTermsInput_txt" type="number" value="2" min="2" max="5" class=""
+                              readonly="readonly" />
+                            <button class="btn btn_plus" title="Increment"><span>&#43;</span></button>
                           </div>
                         </div>
                       </div>
+
+                      <div class="score_cont">
+                        <div class="score_title">Score</div>
+                        <div class="score_txt">0/0</div>
+                      </div>
+
+                      <div class="ques_cont">
+                        <div class="wrong_mc">&#10006;</div>
+                        <div class="correct_mc">&#10004;</div>
+                        <div class="row" style="margin: 0px;">
+                          <div class="ques_content col-8">
+                            <div class="qNo_txt">Q1: What is the value of:</div>
+                            <div class="qtn_txt bold">QUESTION</div>
+                          </div>
+                          <div class="ans_content col-4">
+                            <div class="row" style="height: 100%;">
+                              <div class="col my-auto">
+                                <label htmlFor="numbInput_txt" class="numbInput_label bold">=</label>
+                                <input id="numbInput_txt" type="number" placeholder="0" class="bold" />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="correctAnswer_txt bold">0/0</div>
                     </div>
                   </div>
-                  <div class="correctAnswer_txt bold">0/0</div>
                 </div>
               </div>
             </div>
@@ -342,7 +349,7 @@
             </div>
           </div>
           <!-- Explain Modal Popup -->
-          <div id="explain_mc" class="popup" tabindex="-1" role="dialog" aria-labelledby="explainModalPopupTitle"
+          <div id="explain_mc" class="popup_mc" tabindex="-1" role="dialog" aria-labelledby="explainModalPopupTitle"
             aria-hidden="true">
             <div class="popuphead container">
               <h2>Explanation</h2>
@@ -662,6 +669,8 @@
   <script src="assets/plugins/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/preloader.js"></script>
   <script src="assets/plugins/splitjs/split.min.js"></script>
+  <script type="text/javascript" src="assets/plugins/hammer.min.js"></script>
+  <script type="text/javascript" src="assets/js/hammer-manager.js"></script>
   <script src="assets/js/themes.js"></script>
   <script src="assets/lib/guide-tour/guide-tour.js"></script>
   <script src="assets/lib/guide-tour/guide-tour-data.js"></script>
