Final Changes to Alpha feedback

--- a/index.html
+++ b/index.html
@@ -473,17 +473,19 @@
           <div class="footer-menu-container left">
             <div class="btn-wrap btn-wrap-info">
               <button id="btn_info" class="btn btn_info" title="Instructions" data-toggle="tooltip">
-                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="-5 -6 50 50">
+                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="-5 -5 46 46">
                   <g id="Layer_2" data-name="Layer 2">
-                    <g id="Desktop">
-                      <g id="page_04">
-                        <path class="cls-1" d="M25.48,13.68a14,14,0,1,1-2.35-2.33" />
-                        <path class="cls-1" d="M22.21,16.88a9.39,9.39,0,1,1-2.5-2.42" />
-                        <path class="cls-1" d="M18.56,20.37a4.53,4.53,0,1,1-4.06-2.52,4.46,4.46,0,0,1,1.76.35" />
-                        <line class="cls-1" x1="13.68" y1="23.2" x2="35.06" y2="1.82" />
-                        <polygon class="cls-1"
-                          points="36.32 5.08 30.52 10.88 26.57 10.25 25.94 6.3 31.75 0.5 32.38 4.45 36.32 5.08" />
-                      </g>
+                    <g id="Layer_1-2" data-name="Layer 1">
+                      <ellipse class="cls-1" cx="17.5" cy="17.4" rx="17" ry="16.9" />
+                      <ellipse class="cls-1" cx="17.5" cy="17.4" rx="7.97" ry="7.92" />
+                      <line class="cls-1" x1="9.99" y1="21.13" x2="3.98" y2="27.11" />
+                      <line class="cls-1" x1="27.27" y1="3.96" x2="21.26" y2="9.93" />
+                      <line class="cls-1" x1="14.03" y1="24.59" x2="7.73" y2="30.84" />
+                      <line class="cls-1" x1="31.02" y1="7.69" x2="24.73" y2="13.94" />
+                      <line class="cls-1" x1="13.74" y1="9.93" x2="7.73" y2="3.96" />
+                      <line class="cls-1" x1="31.02" y1="27.11" x2="25.01" y2="21.13" />
+                      <line class="cls-1" x1="10.27" y1="13.94" x2="3.98" y2="7.69" />
+                      <line class="cls-1" x1="27.27" y1="30.84" x2="20.97" y2="24.59" />
                     </g>
                   </g>
                 </svg>
