Landing Page and Other changes for responsive design.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Evaluate Algebraic Expressions - Addition (Birds)</title>
+  <title>Algebraic Expressions - Addition and Multiplication (Birds)</title>
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover,  shrink-to-fit=no" />
@@ -37,9 +37,9 @@
       <div class="launch_expl_title_container">
         <div class="launch_expl_title">
           <div class="exploriment_title">
-            <h1 class="titledesktop">Evaluate Algebraic <br> Expressions</h1>
-            <h1 class="titlemobilelandscape">Evaluate Algebraic Expressions</h1>
-            <div class="subtitle">Addition (Birds)</div>
+            <h1 class="titledesktop">Algebraic Expressions</h1>
+            <h1 class="titlemobilelandscape">Algebraic Expressions</h1>
+            <div class="subtitle">Addition and Multiplication (Birds)</div>
           </div>
           <div class="launch-btn-container">
             <button id="btn_launch" class="btn btn_launch">Launch</button>
@@ -61,8 +61,8 @@
             </div>
             <div class="rightpan">
               <h1>
-                <span class="title">Evaluate Algebraic Expressions &ndash;</span>
-                <span class="sub-title">Addition (Birds)</span>
+                <span class="title">Algebraic Expressions &ndash;</span>
+                <span class="sub-title">Addition and Multiplication (Birds)</span>
               </h1>
             </div>
           </div>
@@ -202,11 +202,11 @@
                 <div class="procBox container">
                   <span class="procstepno bold">1.</span>
                   <p>
-                    This exploriment deals with addition of variables. We have
-                    a set of five different birds, each represented by an
-                    algebraic variable (like 'a', 'b', etc). We are also given
-                    how many birds of each type are there (value of variable).
-                    As an example, we could have -
+                    This exploriment deals with addition and multiplication of variables. We have
+                  a set of five different birds, each represented by an
+                  algebraic variable (like 'a', 'b', etc). We are also given
+                  how many birds of each type are there (value of variable).
+                  As an example, we could have -
                   </p>
                   <div style="float: left; align-items: center; display: flex; flex-direction: row;">
                     <div class="eaglePix"></div>
@@ -235,12 +235,14 @@
                   <span class="procstepno bold">2.</span>
                   <p>You would be asked a question like this:</p>
                   <p class="bold">What is the Value of -</p>
-                  <p class="bold"><i>a + b + c</i></p>
+                  <p class="bold"><i>a + 2b + 3c</i></p>
                   <p>
                     From the information given, you have to add the respective
                     figures like this -
                   </p>
-                  <p class="bold">4 + 3 + 5 = 12</p>
+                  <p class="bold">4 + 2 x 3 + 3 x 5</p>
+                  <p class="bold">= 4 + 6 + 15</p>
+                  <p class="bold">= 25</p>
                 </div>
                 <hr />
                 <div class="procBox container">
@@ -250,7 +252,7 @@
                   <span class="" style="float: left;margin-top: 0.9rem;">Value</span>
                   <div class="inst_ans_content" style="margin-left: 4rem;">
                     <div class="numbInput_label bold">=</div>
-                    <div class="numbInput_txt bold">0</div>
+                    <div class="numbInput_txt bold">25</div>
                   </div>
                   <p>and then press the <span class="bold">Ok</span> button.</p>
                   <div class="btn btn_ok">Ok</div>
@@ -302,8 +304,9 @@
                 <div class="procBox container">
                   <span class="procstepno bold">6.</span>
                   <p>
-                    You can use the Configuration manager to decide on the number of digits and the number of
-                    terms.
+                    At the top left, is the configuration manager. You can use
+                  it to decide on the number of digits and the number of
+                  terms.
                   </p>
                   <div class="config_cont">
                     <div style="margin-right: 1rem;">
@@ -323,8 +326,8 @@
                   </div>
                   <p>
                     The number of digits denotes the size of the numbers to
-                    add. If the number of digits is "1", then all bird counts
-                    are 1 digit numbers.
+                  add. If the number of digits is "1", then all bird counts
+                  are 1 digit numbers.
                   </p>
                   <p>
                     If the number of digits is 5, you would have 12345 owls
@@ -340,9 +343,9 @@
                     possible in the given algebraic expression.
                   </p>
                   <p>A two-termed expression is -</p>
-                  <p class="bold"><i>a + b</i></p>
+                  <p class="bold"><i>a + 2b</i></p>
                   <p>While a four-termed expression is</p>
-                  <p class="bold"><i>a + b + c + d</i></p>
+                  <p class="bold"><i>a + 3b + 5c + d</i></p>
                   <p>The maximum number of terms can vary between 2 and 5.</p>
                 </div>
               </div>
