--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                           </div>
                         </div>
                       </div>
-
+                      <div class="expr_cont row">
+                        <div class="col">
                       <div class="score_cont">
                         <div class="score_title">Score</div>
                         <div class="score_txt">0/0</div>
@@ -173,6 +174,8 @@
                         </div>
                       </div>
                       <div class="correctAnswer_txt bold">0/0</div>
+                    </div>
+                  </div>
                     </div>
                   </div>
                 </div>
@@ -420,45 +423,44 @@
               </div>
               <div class="birdsAnswer_container">
                 <table class="centertable">
-                  <tr>
-                    <td>
-                      <div class="exprs_txt">
-                        <div id="expr1_txt">A</div>
-                        <div id="exprPlus1_mc">+</div>
-                        <div id="expr2_txt">A</div>
-                        <div id="exprPlus2_mc">+</div>
-                        <div id="expr3_txt">A</div>
-                        <div id="exprPlus3_mc">+</div>
-                        <div id="expr4_txt">A</div>
-                        <div id="exprPlus4_mc">+</div>
-                        <div id="expr5_txt">A</div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="vals_txt">
-                        <div>=</div>
-                        <div id="val1_txt">19325</div>
-                        <div id="valPlus1_mc">+</div>
-                        <div id="val2_txt">19325</div>
-                        <div id="valPlus2_mc">+</div>
-                        <div id="val3_txt">19325</div>
-                        <div id="valPlus3_mc">+</div>
-                        <div id="val4_txt">19325</div>
-                        <div id="valPlus4_mc">+</div>
-                        <div id="val5_txt">19325</div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="answer_txt">
-                        <div>=</div>
-                        <div id="answer_txt" class="answer_val">19325</div>
-                      </div>
-                    </td>
-                  </tr>
+                  <tbody>
+                    <tr class="exprs_txt">
+                      <td></td>
+                      <td id="expr1_txt">A</td>
+                      <td id="exprPlus1_mc">+</td>
+                      <td id="expr2_txt">A</td>
+                      <td id="exprPlus2_mc">+</td>
+                      <td id="expr3_txt">A</td>
+                      <td id="exprPlus3_mc">+</td>
+                      <td id="expr4_txt">A</td>
+                      <td id="exprPlus4_mc">+</td>
+                      <td id="expr5_txt">A</td>
+                    </tr>
+                    <tr class="vals_txt">
+                      <td>=</td>
+                      <td id="val1_txt">19325</td>
+                      <td id="valPlus1_mc">+</td>
+                      <td id="val2_txt">19325</td>
+                      <td id="valPlus2_mc">+</td>
+                      <td id="val3_txt">19325</td>
+                      <td id="valPlus3_mc">+</td>
+                      <td id="val4_txt">19325</td>
+                      <td id="valPlus4_mc">+</td>
+                      <td id="val5_txt">19325</td>
+                    </tr>
+                    <tr class="answer_txt">
+                      <td>=</td>
+                      <td id="answer_txt" class="answer_val">19325</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                  </tbody>
                 </table>
               </div>
             </div>
